fix: remove pr on mobile

--- a/static/output.css
+++ b/static/output.css
@@ -959,6 +959,10 @@ video {
     padding-top: 2rem;
   }
 
+  .md\:pr-8 {
+    padding-right: 2rem;
+  }
+
   .md\:text-left {
     text-align: left;
   }
